# node-process-watcher

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  binding.gyp  common.gypi  main.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  prebuildify.yml
lib/: index.d.ts  index.js
prebuilds/linux-x64/: node-process-watcher.node
prebuilds/win32-x64/: node-process-watcher.node
src/: index.d.ts  index.js  index.ts
src/c/: linux_process.cc  mac_process.cc  main.cc  process.h  unix_process.cc  win_process.cc
src/js/: clean.js  index.ts
test/: console.js  folder_size.js  log.js  net_proxy.js  open-desk-software.bat  open-desk-software.js  process.kill.js  require.test.js  run.js  temp-test.js  test.ts
